--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   get:
+  fluttertoast:
+  intl: ^0.18.0
+  skeletonizer: ^1.2.0
+  shimmer: ^3.0.0
+  pinput: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - Assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
