--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   skeletonizer: ^1.2.0
   shimmer: ^3.0.0
   pinput: ^4.0.0
+  circle_nav_bar: ^2.0.1+1
 
 dev_dependencies:
   flutter_test:
