--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,24 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   get:
-  fluttertoast:
+  fluttertoast: ^8.2.6
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.3
   intl: ^0.18.0
   skeletonizer: ^1.2.0
   shimmer: ^3.0.0
   pinput: ^4.0.0
   circle_nav_bar: ^2.0.1+1
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
