--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  get:
+  get: ^4.6.6
   fluttertoast: ^8.2.6
   http: ^1.2.1
   shared_preferences: ^2.2.3
